--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -178,7 +178,7 @@
         "\n",
         "# install packages, set configuration, as needed\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,33 +214,10 @@
       "source": [
         "# import pacakages for your notebook\n",
         "\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "import matplotlib.colors as col\n",
         "\n",
-        "import matplotlib.patches as mpatches\n",
-        "\n",
-        "from IPython.display import Markdown as md\n",
-        "from IPython.display import display, Math, Latex\n",
-        "\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
-        "from sklearn.metrics import roc_auc_score\n",
-        "from sklearn.metrics import roc_curve\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "from sklearn.metrics import precision_recall_curve\n",
-        "\n",
-        "from sklearn.metrics import plot_roc_curve\n",
-        "from sklearn.metrics import plot_precision_recall_curve\n",
-        "\n",
-        "\n",
-        "from adjustText import adjust_text\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +301,7 @@
         "\n",
         "STEP_1_COMPLETE = False"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +337,7 @@
         "\n",
         "STEP_2_COMPLETE = False"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +366,7 @@
         "\n",
         "STEP_3_COMPLETE = False"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +407,7 @@
       "source": [
         "STEP_4_COMPLETE = False"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +445,7 @@
         "    phase1_2, phase2_2 = train_test_split(df2, train_size=phase1_size, random_state=seed, stratify=df2['Class'])\n",
         "    phase1_3, phase2_3 = train_test_split(df3, train_size=phase1_size, random_state=seed, stratify=df3['Class'])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +487,7 @@
         "\n",
         "STEP_5_COMPLETE = False"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +525,7 @@
         "\n",
         "STEP_6_COMPLETE = False"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +569,7 @@
         "\n",
         "STEP_7_COMPLETE = False"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +598,7 @@
         "\n",
         "STEP_8_COMPLETE = False"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +644,7 @@
         "\n",
         "STEP_9_COMPLETE = False"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +676,7 @@
         "# print(predicts1)\n",
         "STEP_10_COMPLETE = False"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +743,7 @@
         "\n",
         "STEP_11_COMPLETE = False"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +781,7 @@
         "            print('Thresholds: ', thresholds)\n",
         "            display(vals)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +836,7 @@
         "\n",
         "STEP_12_COMPLETE = False"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -901,7 +878,7 @@
         "    display_thresholds_argmax(y_test_2, predicts2, 'Dataset 2')\n",
         "    display_thresholds_argmax(y_test_3, predicts3, 'Dataset 3')\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,7 +950,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1014,7 +991,7 @@
         "\n",
         "STEP_13_COMPLETE = False"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1004,7 @@
         "\n",
         "For each dataset, plot the Receiver Operating Characteristics (ROC) curve for each classifier. You'll plot all three classifiers in a different color on the same plot. Include the AUC calculations with your plot\n",
         "\n",
-        "Optional: Annotate each plot to represent the points of maximum accuracy, precision, recall, and F-measure for each model. If you choose to annotate these points, consider using the Python package `adjustText`. Moreover, these [examples](https://adjusttext.readthedocs.io/en/latest/Examples.html) may also be helpful. Our adjust_text parameters closely resemble the first of the \"Difficult examples\" on this page, though we increased the values for `expand_text` and `expand_points`.\n",
+        "Annotate each plot to represent the points of maximum accuracy, precision, recall, and F-measure for each model. OPTIONAL: use the Python package `adjustText` to automatically displace the labels and to add arrows to the locations of interest along the ROC curves. Moreover, these [examples](https://adjusttext.readthedocs.io/en/latest/Examples.html) may also be helpful. Our adjust_text parameters closely resemble the first of the \"Difficult examples\" on this page, though we increased the values for `expand_text` and `expand_points`.\n",
         "\n",
         "Hints:\n",
         "- Consider a single function with the signature `plot_roc_curves(y, predicts, title)` which will be called three times for each dataset. `y` is your test set y-values, `predicts` is the dictionary you created in STEP 10, and `title` is the title of the plot. Thus, `plot_roc_curves` will create a single plot with the roc_curve of three models for that dataset. You would call `plot_roc_curves` three times, once for each dataset.\n",
@@ -1054,7 +1031,7 @@
         "\n",
         "STEP_14_COMPLETE = False"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1090,7 +1067,7 @@
         "\n",
         "STEP_15_COMPLETE = False"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1127,7 +1104,7 @@
         "\n",
         "STEP_16_COMPLETE = False"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1160,7 +1137,7 @@
       "source": [
         "STEP_17_COMPLETE = False"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1210,7 +1187,7 @@
       "source": [
         "STEP_18_COMPLETE = False"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1254,7 +1231,7 @@
         "\n",
         "#---------------------------------------------"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1276,7 +1253,7 @@
       "source": [
         "STEP_19_COMPLETE = False"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1309,7 +1286,7 @@
         "\n",
         "STEP_20_COMPLETE = False"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     }
   ]
