--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -119,18 +119,28 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
-        "\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.colors as col\n",
         "\n",
+        "import matplotlib.patches as mpatches\n",
+        "\n",
+        "from IPython.display import Markdown as md\n",
+        "from IPython.display import display, Math, Latex\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
         "from sklearn.metrics import roc_auc_score\n",
+        "from sklearn.metrics import roc_curve\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import precision_recall_curve\n",
         "\n",
-        "from IPython.display import Markdown as md\n",
+        "from sklearn.metrics import plot_roc_curve\n",
+        "from sklearn.metrics import plot_precision_recall_curve\n",
         "\n",
         "\n",
         "from adjustText import adjust_text\n",
+        "%matplotlib inline\n",
         "```"
       ]
     },
