--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -647,7 +647,7 @@
       "source": [
         "#STEP 9\n",
         "\n",
-        "#STUDENT CODE - Insert code to create the train_classifiers function\n",
+        "#STUDENT CODE - Insert code to create the predict_probabilities function\n",
         "#---------------------------------------------\n",
         "\n",
         "#---------------------------------------------\n",
