--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -994,7 +994,7 @@
       "source": [
         "# STEP 13\n",
         "\n",
-        "#STUDENT CODE - Insert code to create the threshold_metrics function\n",
+        "#STUDENT CODE - Insert code to display the confusion matrices\n",
         "#---------------------------------------------\n",
         "\n",
         "#---------------------------------------------\n",
